# jvmti-examples

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
GetAllStackTraces/Java/src/: GetAllStackTracesTest.java
GetAllStackTraces/Native/: CMakeLists.txt  library.cpp
GetAllStackTraces/Native/include/: library.h
JVMTIGetSystemProperties/Native/: CMakeLists.txt  library.cpp
JVMTIGetSystemProperties/include/: library.h
ch01_capability_checker/: CMakeLists.txt  CapabilityTestApp.java  README.md
ch01_capability_checker/src/: agent.c
ch02_basic_agent/: CMakeLists.txt  HelloApp.java  README.md  basic_agent.c
ch03_event_registration/: CMakeLists.txt  EventTestApp.java  README.md  event_logger_agent.c
ch04_thread_class_inspection/: CMakeLists.txt  InspectionTestApp.java  README.md  thread_class_inspection_agent.c
ch05_heap_stack_agent/: CMakeLists.txt  HeapStackTestApp.java  README.md  heap_stack_agent.c
ch05_profiler_agent/: CMakeLists.txt
ch06_class_transform_agent/: README.md  TargetClass.java  class_transform_agent.c
ch06_gc_exception_agent/: CMakeLists.txt  README.md  gc_exception_agent.c
ch07_jni_callback_agent/: AgentCallback.java  CMakeLists.txt  README.md  jni_callback_agent.c
ch07_jvm_runtime_agent/: CMakeLists.txt  README.md  RuntimeTestApp.java  jvm_runtime_agent.c
ch08_exception_agent/: CMakeLists.txt  ExceptionTestApp.java  README.md  exception_agent.c
ch08_thread_control_agent/: CMakeLists.txt  README.md  thread_control_agent.c
ch09_advanced_techniques/: AdvancedTestApp.java  CMakeLists.txt  README.md  advanced_agent.c
ch09_heap_stack_agent/: CMakeLists.txt  heap_stack_agent.c
ch10_class_transform_agent/: CMakeLists.txt  TargetClass.java
ch10_profiler_agent/: CMakeLists.txt  ProfilerTestApp.java  README.md  profiler_agent.c
ch11_deployment_agent/: DeployTestApp.java  README.md  prod_agent.c
ch11_memory_cleanup_agent/: CMakeLists.txt  README.md  memory_cleanup_agent.c
ch12_debugging_agent/: README.md  heap_stack_agent.c
ch12_prod_agent/: CMakeLists.txt  prod_agent.c
ch12_stability_agent/: CMakeLists.txt  README.md  StabilityTestApp.java  stability_agent.c
ch13_allocation_tracker/: AllocTestApp.java  CMakeLists.txt  README.md  alloc_tracker.c
cmake/: JvmtiCommon.cmake
common/: jvmti_utils.h
